<resources>
    <string name="app_name">LUX Battery Saver</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-8178932862468051/2690110357</string>
    <string name="natives">ca-app-pub-3940256099942544/2247696110</string>
    <string name="instritial">ca-app-pub-8178932862468051/2285241084</string>
    <string name="developer_name">Natage</string>
    <string name="developer_email">alexvarboffin@gmail.com</string>
    <string name="tv_no_issue">No issue</string>
    <string name="tv_2x_fast_charger">2x Fast Charger</string>
    <string name="tv_disable_location_service_and_your_battery">Disable location service and your battery will charge 2x faster</string>
    <string name="but_turn_off_location">Turn Off Location</string>
    <string name="tv_3x_fast_charger">3x Fast Charger</string>
    <string name="tv_enable_airplane_mode_and_your_battery_will_charge_3x_faster">Enable airplane mode and your battery will charge 3x faster</string>
    <string name="but_turn_on_airplane_mode">Turn on airplane mode</string>
    <string name="tv_2x_fast_charger_2">2x Fast Charger</string>
    <string name="tv_disable_mobile_data_and_your_battery_will_charge_2x_faster">Disable mobile data and your battery will charge 2x faster</string>
    <string name="but_turn_off_mobile_data">Turn Off Mobile Data</string>
    <string name="tv_temperature">Temperature</string>
    <string name="tv_voltage">Voltage</string>
    <string name="tv_level">Level</string>
</resources>