<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtNoMoreIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tv_no_issue"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:visibility="gone" />

    <com.appodeal.ads.BannerView
        android:id="@+id/appodealBannerViewCloseTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_above="@+id/tool_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView"
        android:layout_below="@+id/tool_bar"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/loutIssues"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <LinearLayout
                android:id="@+id/NativeAdContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:visibility="gone" />


            <android.support.v7.widget.CardView
                android:id="@+id/LocationCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/NativeAdContainer"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/white">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtTitleLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="24dp"
                            android:text="@string/tv_2x_fast_charger"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtDicLocation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/TxtTitleLocation"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="12dp"
                            android:text="@string/tv_disable_location_service_and_your_battery"
                            android:textColor="@color/textColor"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/Rlout_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Rlout_top"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/LocationTurnOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="8dp"
                            android:text="@string/but_turn_off_location"
                            android:textColor="@color/textColor" />

                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/AroplaneCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LocationCardView"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top_Aroplane"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtTitleAroplane"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="24dp"
                            android:text="@string/tv_3x_fast_charger"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />


                        <TextView
                            android:id="@+id/txtDicAroplane"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/TxtTitleAroplane"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="12dp"
                            android:text="@string/tv_enable_airplane_mode_and_your_battery_will_charge_3x_faster"
                            android:textColor="@color/textColor"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/Rlout_action1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Rlout_top_Aroplane"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/AroplaneTurnOn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="8dp"
                            android:text="@string/but_turn_on_airplane_mode"
                            android:textColor="@color/textColor" />

                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/MoblieDataCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/AroplaneCardView"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:id="@+id/Rlout_top_MoblieData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/TxtTitleMobileData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="24dp"
                            android:text="@string/tv_2x_fast_charger_2"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtDicMobileData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/TxtTitleMobileData"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="12dp"
                            android:text="@string/tv_disable_mobile_data_and_your_battery_will_charge_2x_faster"
                            android:textColor="@color/textColor"
                            android:textSize="14sp" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/Rlout_action2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Rlout_top_MoblieData"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/MoblieDataTurnOff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="8dp"
                            android:background="?android:attr/selectableItemBackground"
                            android:padding="8dp"
                            android:text="@string/but_turn_off_mobile_data"
                            android:textColor="@color/textColor" />

                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>

    <!--<com.google.android.gms.ads.AdView-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:visibility="gone"-->
        <!--ads:adSize="BANNER"-->
        <!--ads:adUnitId="@string/banner_ad_unit_id" />-->

</RelativeLayout>
